# petroules-utilities-qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README  README.md  petroules-utilities-qt.pro  petroules-utilities.pri
.travis/: configure.sh  make.sh
cmake/: GitUtils.cmake  QtUtils.cmake  TargetArch.cmake  qt.cmake
demos/: CMakeLists.txt  demos.pro
demos/globalinputhooks/: CMakeLists.txt  globalinputhooks.pro  hookmonitorwindow.cpp  hookmonitorwindow.h  hookmonitorwindow.ui  main.cpp  mainwindow.cpp  resources.rc
demos/platformintegration/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platformintegration.pro  platformintegrationwindow.cpp  platformintegrationwindow.h  platformintegrationwindow.ui  resources.qrc  resources.rc
demos/windowsystem/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  windowsystem.pro
doc/: doxyfile
lib/qtsingleapplication/src/: qtsingleapplication.cpp  qtsingleapplication.h
res/: app.icns  app.url  petroules_utilities_resources.qrc
src/: CMakeLists.txt  inactivityeventfilter.cpp  inactivityeventfilter.h  integratedapplication.cpp  integratedapplication.h  integratedapplication_mac.mm  integratedapplication_p.h  integratedmainwindow.cpp  integratedmainwindow.h  integratedmainwindow_mac.mm  integratedmainwindow_p.h  linuxsysteminfo.cpp  linuxsysteminfo.h  nativewindow.cpp  nativewindow.h  nativewindowinfo.cpp  nativewindowinfo.h  petroules-utilities-global.h  petroules-utilities.h  petroules-utilities.rc  platforminformation.cpp  platforminformation.h  qversion.cpp  qversion.h  src.pro  stable.h  systemkeyboardreadwrite.cpp  systemkeyboardreadwrite.h  translationutils.cpp  translationutils.h  version.h  windowmanager.cpp  windowmanager.h  windowmanager_mac.mm  windowmanager_mac_p.h  windowmanager_win.cpp  windowmanager_x11.cpp
src/dialogs/: nativedialogs.cpp  nativedialogs.h  nativefiledialog.cpp  nativefiledialog.h  nativeopendirectorydialog.cpp  nativeopendirectorydialog.h  nativeopenfiledialog.cpp  nativeopenfiledialog.h  nativeprintdialog.cpp  nativeprintdialog.h  nativesavefiledialog.cpp  nativesavefiledialog.h  nativesystemdialog.cpp  nativesystemdialog.h
src/mac/: cocoaeventlistener.h  cocoaeventlistener.mm  cocoainitializer.h  cocoainitializer.mm  icocoaeventreceiver.h  icocoaeventreceiver.mm  machelpers.h  machelpers.mm  macloginitemsmanager.h  macloginitemsmanager.mm  mactoolbarsearchwidget.h  mactoolbarsearchwidget.mm
src/widgets/: explorersearchlineedit.cpp  explorersearchlineedit.h  itoolbarsearchwidget.cpp  itoolbarsearchwidget.h  searchlineedit.cpp  searchlineedit.h  searchlineedit_mac.mm
src/win32/: desktopwindowmanager.cpp  desktopwindowmanager.h  explorerstyle.cpp  explorerstyle.h  integratedmainwindow.cpp  integratedmainwindow.h  jumplist.cpp  jumplist.h  jumplists_win32.h  thumbbar.cpp  thumbbar.h  windowsfileregistration.cpp  windowsfileregistration.h  windowstaskbarintegration_includes.h
